<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:id="@+id/pref_grocery_list_url"
        android:key="pref_grocery_list_url"
        android:summary="@string/pref_grocery_list_url_summary"
        android:title="@string/pref_grocery_list_url" />

    <SwitchPreference
        android:id="@+id/pref_enable_quantity_checks"
        android:key="pref_enable_quantity_checks"
        android:summary="@string/pref_enable_quantity_checks_summary"
        android:title="@string/pref_enable_quantity_checks" />

    <EditTextPreference
        android:id="@+id/pref_interval_between_quantity_checks"
        android:dependency="pref_enable_quantity_checks"
        android:inputType="number"
        android:key="pref_interval_between_quantity_checks"
        android:summary="@string/pref_interval_between_quantity_checks_summary"
        android:title="@string/pref_interval_between_quantity_checks" />
</PreferenceScreen>